mini compteur de dechets a relier au total de dechets recoltés

--- a/nuit-info-surfapp/angular.json
+++ b/nuit-info-surfapp/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "nuit-info-surfapp"
+  "defaultProject": "nuit-info-surfapp",
+  "cli": {
+    "analytics": "14c41924-71ae-41bf-a481-b70dee386b0a"
+  }
 }
